--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon ./app.js" 
+    "start": "nodemon ./app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
