--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
+    "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
